fixed circle wh and num z-index

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -323,8 +323,8 @@
   }
 
   .circle {
-    width: 324px;
-    height: 324px;
+    width: 340px;
+    height: 340px;
 
     bottom: 46px;
 
@@ -361,7 +361,7 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
 
-    z-index: 5;
+    z-index: 4;
 
     color: $color-red;
 
